--- a/style.css
+++ b/style.css
@@ -40,3 +40,28 @@ a {
   border-radius: 20px;
   margin-top: 20px;
 }
+
+button {
+  background-color: rgb(52, 69, 221);
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.cart {
+  width: 100%;
+  height: 50px;
+  background-color: gray;
+  color: white;
+  margin-top: 20px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+
+.cart p {
+  margin: 0;
+  padding: 0;
+}
