6. Class & Style Binding
- Vue instance에 있는 data를 `style`과 `class`에 바인딩 시킬 수 있다.
- `:style`: 스타일의 경우에는 스타일 속성을 key로 넣고 value에는 해당 속성에 맞는 값을 넣을 수 있다.
- object 형식으로 한 번에 여러 속성들을 부여할 수도 있다.

- `:class`: 클래스의 경우에는 css에서 만들어놓은 class에 부여할 css 속성들을 html tag에 넣을지에 대한 유무(`true` or `false`)를 결정할 수 있다.
- 해당 클래스명을 key로 설정하고 value에 boolean 값을 넣어서 해당 클래스를 넣을지 말지를 결정할 수 있다.
- class binding도 style binding과 마찬가지로 object 형식으로 한 번에 여러 클래스들을 넣을지 말지 결정할 수 있다.

--- a/style.css
+++ b/style.css
@@ -65,3 +65,20 @@ button {
   margin: 0;
   padding: 0;
 }
+
+.color-box {
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  border: 1px solid black;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.disabledButton {
+  background-color: #d8d8d8;
+}
+
+.lineThrough {
+  text-decoration: line-through;
+}
